[package]
name = "svrv"
description = "Serve Or Live-Reload Static Sites"
version = "0.0.2"
repository = "https://github.com/qxb3/svrv"
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
http-body-util = "0.1.2"
hyper = { version = "1.5.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
tokio = { version = "1.41.0", features = ["full"] }
